--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">ControlX Food</string>
     <string name="info_versao">Versão 1.0.0</string>
     <string name="label_button_login">Entrar</string>
-    <string name="title_login">Login</string>
+    <string name="title_login">Entrar</string>
     <string name="label_login_esqueci_senha">Esqueci minha senha</string>
     <string name="info_labal_garcon">Garçon</string>
     <string name="info_labal_mesa">Mesa</string>
